file2/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port # The name of this Service.
spec:
  ports:
  - name: http
    port: 8000 # The service's internal port.
    protocol: TCP
    targetPort: 8000 # The port on the pod to send traffic to.
    nodePort: 30000 # The static port to open on each cluster node's IP address.
  selector:
    service: nginx-server # Selects pods with the label "service: nginx-server".
  type: NodePort # The type of service. NodePort exposes the service on each Node's IP.
